--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
+    "gulp-uglify": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
     "npm": "^5.6.0",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
